===============================================================================
H323plus 1.26.0 - 1.26.x
===============================================================================
Added H460.25 Location information support (req Expat support in PTLIB) (1.26.1)

===============================================================================
H323plus 1.25.0 - 1.25.5
===============================================================================
Added H323_MEDIAENCODED compile directive to support external media decode/encode
Added Encryption support to the H.224 Channel and H323_ExternalRTPChannel
Performance Memory management Improvement in audio/video processing.
Updated to compile with PTLIB Head (1.25.5)
Added Language assignment and routing support
Added TLS signalling support
Added DH6144 and DH8192 H.235 Support (support for keylength up to 8192 bits)
Added H.460.22 Support
Added vs2012 Build environment
Fixed vs2010 Build environment
Added H.461 Asset Support. (1.25.4)
Update and fixes for H.460.26 (1.25.3)
Update Presence System to Version 3. (1.25.2)
Update Alternate and Assigned Gatekeeper code. Removing buggy pointers
Added H.224 Factory loader moved to H224 subdirectory
Added T.140 Support
Added H.284 <New> far end motor control
add support for <ip>##<room>#<pass> dialing


===============================================================================
H323plus 1.24.0 - 1.24.2
===============================================================================
Added H.460 Compatibility Feature
Added H.460.26 Support (depreciated nonstandard H.460.17a) [Work in Progress]
Updated ASN.1 to H.323v7 (H.225v7, H.245v15)
Added H.460.4 Baseline
FIX Change FastStart to be default FALSE to bring into line with other video equipment
Added Language support to Setup and Connect messages
Added interoperable H.235.6 [Work in progress]
FIX Try reconnecting signalling channel if goes down unexpectedly and not drop call
FIX Check Alternate gatekeepers are valid