@@ -66,9 +66,9 @@
 #define H323PLUS_VER ( OPENH323_MAJOR*1000 + OPENH323_MINOR*10 + OPENH323_BUILD )
 
 
-#if PTLIB_VER >= 2110
+//#if PTLIB_VER >= 2110
   #define H323_STLDICTIONARY  1
-#endif
+//#endif
 
 #undef H323_AUDIO_CODECS
 
@@ -193,6 +193,10 @@
 #define H323_FRAMEBUFFER 1
 
 #undef H323_PACKET_TRACE
+
+#if PTRACING
+    #undef H323_JITTER_ANALYSER
+#endif
 
 #if (PTLIB_VER >= 2110)
  #undef H323_MEDIAENCODED
