@@ -1,6 +1,7 @@
 ===============================================================================
 H323plus 1.26.0 - 1.26.x
 ===============================================================================
+new switch H323_JITTER_ANALYSER and disabled jitter buffer logging by default.
 Added H460.25 Location information support (req Expat support in PTLIB) (1.26.1)
 
 ===============================================================================
